--- a/MyLibrary.csproj
+++ b/MyLibrary.csproj
@@ -218,6 +218,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Covers\default_cover.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -295,10 +296,12 @@
     <Content Include="Views\Shelf\Add.cshtml" />
     <Content Include="Views\Shelf\Edit.cshtml" />
     <Content Include="Views\Shelf\Delete.cshtml" />
+    <Content Include="Views\Book\Add.cshtml" />
+    <Content Include="Views\Book\Index.cshtml" />
+    <Content Include="Views\Shared\_BookDetailsPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Book\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
